# electrovault

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  photo_brain.db-journal  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_RULES.md  ARCHITECTURE.md  CODING_TASK_TEMPLATE.md  DEV_PHASES.md  FACE_RECOGNITION.md  IMPLEMENTATION_PLAN.md  PRODUCT_BRIEF.md
frontend/: README.md
frontend/src/: App.css  App.tsx  index.css
photo_brain/api/: http_api.py
photo_brain/core/: env.py  models.py
photo_brain/embedding/: __init__.py  text_embedder.py
photo_brain/events/: __init__.py  grouper.py  summarizer.py
photo_brain/faces/: __init__.py  detector.py  recognizer.py
photo_brain/index/: __init__.py  face_grouping.py  indexer.py  location.py  records.py  schema.py  updates.py  vector_backend.py
photo_brain/ingest/: __init__.py  exif_reader.py  pipeline.py  scanner.py  thumbnailer.py
photo_brain/search/: __init__.py  executor.py  planner.py
scripts/: ingest.py  test_caption_prompt.py  test_classifier_prompt.py  test_faces.py  test_locationiq.py
tests/: __init__.py  conftest.py  test_api_http.py  test_caption_job.py  test_classification_normalization.py  test_core_models.py  test_events.py  test_face_grouping.py  test_face_grouping_clusters.py  test_faces.py  test_index_schema.py  test_indexing_pipeline.py  test_ingest.py  test_location_resolution.py  test_model_client.py  test_search.py  test_smart_crop.py  test_updates.py  test_vector_backend.py  test_vision_contracts.py  test_vision_embedding.py
(+6 files in other folders)
